# gpt-QuickCut

./: CMakeLists.txt  README.md  README_WIN.md
.github/workflows/: build_windows.yml
scripts/win/: build_win.bat  build_windows.ps1
src/: main.cpp
